<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/common_gray_bg">

    <include layout="@layout/comm_white_title"/>

    <TextView
        android:id="@+id/zonghe_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_7"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="综合车况等级"
        android:textSize="18sp" />

    <com.jzg.erp.widget.MyScrollView
        android:id="@+id/myscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dip"
            android:paddingTop="10dip" >

            <!-- A级 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A"
                    android:textColor="@color/orange_9"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="级"
                    android:paddingLeft="5dip"
                    android:textColor="@color/orange_9"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_A_1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_A_2"
                android:textColor="#000000"
                android:textSize="18sp" />
            <!-- B级 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="B"
                    android:textColor="@color/orange_9"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="级"
                    android:paddingLeft="5dip"
                    android:textColor="@color/orange_9"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_B_1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_B_2"
                android:textColor="#000000"
                android:textSize="18sp" />
            <!-- C级 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="C"
                    android:textColor="@color/orange_9"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="级"
                    android:paddingLeft="5dip"
                    android:textColor="@color/orange_9"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_C_1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_C_2"
                android:textColor="#000000"
                android:textSize="18sp" />
            <!-- D级 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="D"
                    android:textColor="@color/orange_9"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="级"
                    android:paddingLeft="5dip"
                    android:textColor="@color/orange_9"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_D_1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_D_2"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_D_3"
                android:textColor="#000000"
                android:textSize="18sp" />
            <!-- 整备成本等级 -->

            <TextView
                android:id="@+id/chengben_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:background="@color/gray_7"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:text="整备成本等级"
                android:textSize="18sp" />

            <!-- ++级 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dip"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="++"
                    android:textColor="@color/orange_9"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="级"
                    android:paddingLeft="5dip"
                    android:textColor="@color/orange_9"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_des_PPlus_1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_des_PPlus_2"
                android:textColor="#000000"
                android:textSize="18sp" />
            <!-- +级 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textColor="@color/orange_9"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="级"
                    android:paddingLeft="5dip"
                    android:textColor="@color/orange_9"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_des_Plus_1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_des_Plus_2"
                android:textColor="#000000"
                android:textSize="18sp" />
            <!-- -级 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@color/orange_9"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="级"
                    android:paddingLeft="5dip"
                    android:textColor="@color/orange_9"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_des_Minus_1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_des_Minus_2"
                android:textColor="#000000"
                android:textSize="18sp" />
            <!-- 级 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textColor="@color/orange_9"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="级"
                    android:paddingLeft="5dip"
                    android:textColor="@color/orange_9"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_des_MMinus_1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="@string/chekuang_level_des_MMinus_2"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>
    </com.jzg.erp.widget.MyScrollView>
</LinearLayout>
